OF-1383: Remove module inclusion
Now that the previous commit included the code as a dependency, there's no need to include the module that contains similar code.

Using the dependency, and not modules, allows the code to be compiled in both Java 8 and 11.